# deepharbor

./: .env.grafana.okta.example  .gitattributes  .gitignore  DEV_SETUP.md  MERGE_PLAN.md  README.md  dh_dev.sh  docker-compose.dev.yml  docker-compose.yaml  nginx.conf  rebuild_grafana.sh  start_dh.sh
code/DHAdminPortal/: .dockerignore  Dockerfile  app.py  config.ini.example  config.py  dhservices.py  pyproject.toml  restart.sh
code/DHAdminPortal/static/: site.webmanifest  styles.css
code/DHAdminPortal/templates/: base.html  dev_login.html  index.html
code/DHDispatcher/: config.ini.example  main.py  pyproject.toml
code/DHEquipmentPortal/: .gitignore  CLAUDE.md  Dockerfile  app.py  app_config.py  config.ini.example  config.py  dhservices.py  pyproject.toml
code/DHEquipmentPortal/static/: styles.css
code/DHEquipmentPortal/templates/: auth_error.html  base.html  dev_login.html  index.html
code/DHMemberPortal/: Dockerfile  app.py  app_config.py  config.ini.example  dhservices.py  pyproject.toml  restart.sh
code/DHMemberPortal/static/: site.webmanifest
code/DHMemberPortal/static/css/: landing.css  portal.css
code/DHMemberPortal/static/js/: tagline-glitch.js
code/DHMemberPortal/templates/: _dashboard_base.html  _dashboard_sidebar_content.html  _dashboard_status_banner.html  _status_box.html  base.html  dashboard_auths.html  dashboard_floof.html  dashboard_info_storage.html  dashboard_keys.html  dashboard_locked.html  dashboard_preview.html  dashboard_profile.html  dashboard_storage.html  dev_login.html  glitch_sample.html  index.html  landing.html  member_dashboard.html  signup_email.html  signup_form.html  signup_payment.html
code/DHService/: auth.py  config.ini.example  db.py  main.py  pyproject.toml  v1.py
code/DHService/client_test/: pyproject.toml
code/services/DHAccess/: config.ini.example  main.py  pyproject.toml
code/services/DHAuthorizations/: config.ini.example  main.py  pyproject.toml
code/services/DHEquipment/: Dockerfile  README.md  auth.py  config.ini.example  config.py  db.py  fastapiapp.py  main.py  models.py  notifications.py  pyproject.toml  start_services.sh  v1.py
code/services/DHIdentity/: config.ini.example  main.py  pyproject.toml
code/services/DHStatus/: config.ini.example  email_template_handler.py  main.py  pyproject.toml
code/utilities/RFID2DB/: config.ini.example  main.py
code/workers/DH2AD/: config.ini.example  main.py  pyproject.toml
code/workers/DH2RFID/: config.ini.example  main.py  pyproject.toml
code/workers/DHADController/: ad.py  b2c.py  config.ini.example  main.py
code/workers/DHRFIDReader/: config.ini.example  main.py
pg/: README.md
pg/db-init/: 03-seed_equipment.sql  init.sql
pg/sql/: migrate_attachments.sql  migrate_equipment.sql  pgsql_schema.sql  seed_data.sql  seed_data.sql.example
pg/tools/: generate_seed_data.py  update_view.py
tools/: backup_database.sh  seed_data.sh  update_view.sh
tools/grafana/provisioning/dashboards/: deepharbor_membership_overview.json  deepharbor_role_assignments.json
