[project]
name = "dhmemberportal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "configparser>=7.2.0",
    "flask>=3.1.2",
    "flask-session>=0.8.0",
    "logging>=0.4.9.6",
    "msal>=1.34.0",
    "requests>=2.32.5",
    "stripe>=14.3.0",
    "waitress>=3.0.2",
    "werkzeug>=3.1.5",
    "urllib3>=2.6.3",
]
