[project]
name = "dhaccess"
version = "0.1.0"
description = "This service is responsible for managing access control in Deep Harbor"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "configparser>=7.2.0",
    "fastapi[standard]>=0.122.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "urllib3>=2.6.3",
]
