[project]
name = "dh2ad"
version = "0.1.0"
description = "Endpoint that handles working with Active Directory with data from Deep Harbor. Invoked from DHDispatcher."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "configparser>=7.2.0",
    "fastapi[standard]>=0.122.0",
    "requests>=2.32.5",
    "urllib3>=2.6.3",
]
